--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.12.1",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "luxon": "^2.0.1",
     "mongoose": "^5.13.5",
